$NetBSD: CHANGES-2013,v 1.4 2013/01/02 13:05:40 ryoon Exp $

# PLEASE NOTE THAT THE PKGSRC REPOSITORY IS FROZEN FOR INFRASTRUCTURE
# CHANGES, CHANGES TO NON-LEAF PACKAGES, and FOR NEW PACKAGES.
# Mon Dec 17 23:59:40 UTC 2012

Changes to the packages collection and infrastructure in 2012:

	Updated textproc/mdoclint to 1.18 [jnemeth 2013-01-01]
	Updated graphics/blender to 2.65a [ryoon 2013-01-02]
	Updated graphics/fotoxx to 13.01 [ryoon 2013-01-02]
	Updated net/aria2 to 1.16.1 [ryoon 2013-01-02]