@@ -1,13 +1,12 @@
-# $NetBSD: Makefile,v 1.36 2012/12/14 03:13:23 jnemeth Exp $
+# $NetBSD: Makefile,v 1.37 2012/12/16 01:52:01 obache Exp $
 #
 # NOTE: when updating this package, there are two places that sound
 #       tarballs need to be checked
 
-DISTNAME=	asterisk-10.11.0
+DISTNAME=	asterisk-10.11.1
 DIST_SUBDIR=	${PKGNAME_NOREV}
 DISTFILES=	${DEFAULT_DISTFILES}
 EXTRACT_ONLY=	${DISTNAME}.tar.gz
-PKGREVISION=	1
 CATEGORIES=	comms net audio
 MASTER_SITES=	http://downloads.asterisk.org/pub/telephony/asterisk/ \
 		http://downloads.asterisk.org/pub/telephony/asterisk/old-releases/ \
