@@ -1,11 +1,11 @@
-$NetBSD: distinfo,v 1.22 2012/11/13 00:38:46 jnemeth Exp $
+$NetBSD: distinfo,v 1.23 2012/12/14 03:13:23 jnemeth Exp $
 
-SHA1 (asterisk-10.11.0/asterisk-10.11.0.tar.gz) = a678774bd6cb90fb4cefe115eb91a30228410288
-RMD160 (asterisk-10.11.0/asterisk-10.11.0.tar.gz) = 233366c026d4d8806f04e6a43cf8d66a752eb359
-Size (asterisk-10.11.0/asterisk-10.11.0.tar.gz) = 25095528 bytes
-SHA1 (asterisk-10.11.0/asterisk-extra-sounds-en-gsm-1.4.11.tar.gz) = 8692fa61423b4769dc8bfa78faf9ed5ef7a259b9
-RMD160 (asterisk-10.11.0/asterisk-extra-sounds-en-gsm-1.4.11.tar.gz) = 68170c769d739d6b5b35b00f999ad6bbf876f9f6
-Size (asterisk-10.11.0/asterisk-extra-sounds-en-gsm-1.4.11.tar.gz) = 3349898 bytes
+SHA1 (asterisk-10.11.1/asterisk-10.11.1.tar.gz) = b472ec3f5ce172c730dc9e066170ac2ef1673f84
+RMD160 (asterisk-10.11.1/asterisk-10.11.1.tar.gz) = 107e89e19001968152594bae29242f369a5deb21
+Size (asterisk-10.11.1/asterisk-10.11.1.tar.gz) = 25090000 bytes
+SHA1 (asterisk-10.11.1/asterisk-extra-sounds-en-gsm-1.4.11.tar.gz) = 8692fa61423b4769dc8bfa78faf9ed5ef7a259b9
+RMD160 (asterisk-10.11.1/asterisk-extra-sounds-en-gsm-1.4.11.tar.gz) = 68170c769d739d6b5b35b00f999ad6bbf876f9f6
+Size (asterisk-10.11.1/asterisk-extra-sounds-en-gsm-1.4.11.tar.gz) = 3349898 bytes
 SHA1 (patch-Makefile) = ab740f84f9883980cb5d8e8d5ca301f172c76231
 SHA1 (patch-apps_app__dial.c) = e6c9f559310acdb6574d0e034dcb55df7c2ba31f
 SHA1 (patch-apps_app__followme.c) = cd34774a11b96269003d9f1b6fbdfddf5d9b9d4b
