@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.11 2012/10/02 20:11:42 asau Exp $
+# $NetBSD: Makefile,v 1.12 2012/10/03 21:56:19 wiz Exp $
 #
 
 DISTNAME=		gwydion-dylan-${DYLAN_VERSION}
 PKGREVISION=		2
 CATEGORIES=		lang
-MASTER_SITES=		ftp://ftp.opendylan.org/pub/gd/src/tar/ \
-			ftp://ftp.fu-berlin.de/pub/unix/languages/dylan/src/tar/ \
+MASTER_SITES=		ftp://ftp.fu-berlin.de/pub/unix/languages/dylan/src/tar/ \
 			ftp://ftp.ntua.gr/pub/lang/gwydion/src/tar/
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
